# exchange-rs

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  Rocket.toml  database.sh  diesel.toml  rust-toolchain
matcher/: Cargo.toml
matcher/src/: lib.rs
matcher/src/order_match/: mod.rs
migrations/2018-05-27-102403_create_orders/: down.sql  up.sql
migrations/2018-05-27-111358_create_order_matches/: down.sql  up.sql
migrations/2018-05-27-133055_create_depth_cache/: down.sql  up.sql
scripts/: start_db.sh
src/: lib.rs  main.rs
src/accounts/: account.rs  balance.rs  mod.rs
src/api/: mod.rs
src/depth/: mod.rs  orders.rs
src/exchange/: accounts.rs  balance.rs  error.rs  mod.rs  schema.rs
src/exchange/depth/: mod.rs
src/exchange/matcher/: mod.rs
src/exchange/matcher/depth/: mod.rs
src/exchange/matcher/matcher/: mod.rs
src/exchange/matcher/order_match/: mod.rs  tests.rs
src/exchange/matcher/orders/: depth_order.rs  direction.rs  mod.rs
src/exchange/order_match/: mod.rs
src/exchange/orders/: depth_order.rs  direction.rs
src/exchange/store/: mod.rs  schema.rs
src/matcher/: mod.rs
src/order_match/: mod.rs
src/orders/: mod.rs
src/store/: mod.rs
store/matchers/: 1
test/: buy_order.json  matching_sell_order.json  order.sh  unmatching_sell_order.json
