[package]
name = "exchange-rs"
version = "0.1.0"
authors = ["carl"]

[dependencies]
rocket = "0.3.11"
rocket_contrib = "0.3.11"
rocket_codegen = "0.3.11"
dotenv = "0.12.0"
uuid = {version = "0.6.5",features = ["v4", "serde"]}
chrono = {version = "0.4.2",features = ["serde"]}
serde = "1.0.62"
serde_derive = "1.0.62"
serde_json = "1.0.18"