[package]
name = "exchange-rs"
version = "0.1.0"
authors = ["carl"]

[dependencies]
rocket = "0.3.13"
rocket_contrib = "0.3.13"
rocket_codegen = "0.3.13"
dotenv = "0.13.0"
uuid = {version = "0.6.5",features = ["v4", "serde"]}
chrono = {version = "0.4.3",features = ["serde"]}
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.21"