[package]
name = "exchange-rs"
version = "0.1.0"
authors = ["carl"]

[dependencies]
rocket = "0.3.17"
rocket_contrib = "0.3.17"
rocket_codegen = "0.3.17"
dotenv = "0.13.0"
uuid = {version = "0.7.1",features = ["v4", "serde"]}
chrono = {version = "0.4.6",features = ["serde"]}
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
